[package]
name = "adventofcode-2021"
version = "0.1.0"
authors = []
rust-version = "1.56"
edition="2021"

[dependencies]

[[bin]]

name = "day-01-part-1-giltho"
path = "./day-01/part-1/giltho.rs"

[[bin]]
name = "day-01-part-2-giltho"
path = "./day-01/part-2/giltho.rs"

[[bin]]
name = "day-01-part-1-enizor"
path = "./day-01/part-1/enizor.rs"

[[bin]]
name = "day-01-part-2-enizor"
path = "./day-01/part-2/enizor.rs"

[[bin]]
name = "day-01-part-1-thomren"
path = "./day-01/part-1/thomren.rs"

[[bin]]
name = "day-01-part-2-thomren"
path = "./day-01/part-2/thomren.rs"

[[bin]]
name = "day-01-part-1-juliendoutre"
path = "./day-01/part-1/juliendoutre.rs"

[[bin]]
name = "day-01-part-2-juliendoutre"
path = "./day-01/part-2/juliendoutre.rs"

[[bin]]
name = "day-01-part-1-skasch"
path = "./day-01/part-1/skasch.rs"

[[bin]]
name = "day-01-part-2-skasch"
path = "./day-01/part-2/skasch.rs"

[[bin]]
name = "day-02-part-1-thomren"
path = "./day-02/part-1/thomren.rs"

[[bin]]
name = "day-02-part-2-thomren"
path = "./day-02/part-2/thomren.rs"

[[bin]]
name = "day-02-part-1-giltho"
path = "./day-02/part-1/giltho.rs"

[[bin]]
name = "day-02-part-2-giltho"
path = "./day-02/part-2/giltho.rs"

